--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-	        		<li><a href="/">About me</a></li>
+	        		<li><a href="/about">About me</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
