--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/about.html">About me</a></li>
+				<li><a href="/qdirweigraph.html">QDirWeiGraph</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
