--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,10 @@ footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
 }
-
+.intro{
+	background-color: #F8F9FB;
+	padding:5px;
+}
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
