--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -4,7 +4,8 @@
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
-
+	<link rel="stylesheet" type="text/css" href="/css/gallery.css"/>
+	<script type="text/javascript" src="/js/gallery.js"></script>
 		</head>
 		<body>
 {% include header.htm %}
