--- a/_includes/header.htm
+++ b/_includes/header.htm
@@ -1,6 +1,8 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/CV.html">CV</a></li>
+	        			        		<li><a href="/teaching.html">Teaching</a></li>
 				<li><a href="/qdirweigraph.html">QDirWeiGraph</a></li>
 	    		</ul>
 			</nav>
