--- a/_includes/header.htm
+++ b/_includes/header.htm
@@ -3,6 +3,6 @@
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/CV.html">CV</a></li>
 	        			        		<li><a href="/teaching.html">Teaching</a></li>
-				<li><a href="/qdirweigraph.html">QDirWeiGraph</a></li>
+				<li><a href="/tools.html">Tools</a></li>
 	    		</ul>
 			</nav>
