--- a/_includes/header.htm
+++ b/_includes/header.htm
@@ -2,6 +2,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/CV.html">CV</a></li>
+	        		<li><a href="/Publications.html">Publications</a></li>
 	        			        		<li><a href="/teaching.html">Teaching</a></li>
 				<li><a href="/tools.html">Tools</a></li>
 	    		</ul>
