--- a/_includes/header.htm
+++ b/_includes/header.htm
@@ -3,7 +3,7 @@
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/CV.html">CV</a></li>
 	        		<li><a href="/Publications.html">Publications</a></li>
-	        			        		<li><a href="/teaching.html">Teaching</a></li>
+	        			        		<!-- <li><a href="/teaching.html">Teaching</a></li>-->
 				<li><a href="/tools.html">Tools</a></li>
 	    		</ul>
 			</nav>
