--- a/_includes/footer.htm
+++ b/_includes/footer.htm
@@ -2,5 +2,9 @@
 	    		<ul>
 	        		<li><a href="mailto:francois.deloche@outlook.fr">email</a></li>
 	        		<li><a href="https://github.com/fdeloche">github.com/fdeloche</a></li>
+
+	        		<li><a href="https://orcid.org/0000-0002-6045-8166">ORCID</a></li>
+
+	        		<li><a href="https://scholar.google.com/citations?user=KSbAKxMAAAAJ&hl=en&oi=ao">scholar</a></li>
 				</ul>
 			</footer>
