--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="/css/gallery.css"/>
 	<script type="text/javascript" src="/js/gallery.js"></script>
 	{% endif %}
+
+	{% if page.mainpage == true %}
+
+	<link rel="stylesheet" type="text/css" href="/css/mainpage.css"/>
+	{% endif %}
 		</head>
 		<body>
 {% include header.htm %}
